[gd_scene load_steps=23 format=3 uid="uid://hewf6cdwui70"]

[ext_resource type="Script" path="res://ReddRudolf/ReddRudolfManager.gd" id="1_wxx8a"]
[ext_resource type="PackedScene" uid="uid://ctpqc75nl8agi" path="res://ReddRudolf/ReddRudolfSlede.tscn" id="2_0m5s8"]
[ext_resource type="Script" path="res://ReddRudolf/HundBak.gd" id="3_ieqtg"]
[ext_resource type="Texture2D" uid="uid://celtyg7pnra6b" path="res://ReddRudolf/ReddRudolfBakgrunn.png" id="3_j5uc2"]
[ext_resource type="Script" path="res://ReddRudolf/HundForan.gd" id="4_cj7yg"]
[ext_resource type="PackedScene" uid="uid://b3n5bwy2g6aeb" path="res://ReddRudolf/ReddRudolfParallax.tscn" id="5_dm1dw"]
[ext_resource type="PackedScene" uid="uid://clxlyde7effg1" path="res://ReddRudolf/dog_anim.tscn" id="7_3asxo"]
[ext_resource type="Texture2D" uid="uid://b8ykjq1brqufe" path="res://ReddRudolf/Tilemap.png" id="7_kbj8e"]
[ext_resource type="Script" path="res://ReddRudolf/Line_Between.gd" id="9_eqkmq"]
[ext_resource type="Shortcut" uid="uid://dyae28g1lcisu" path="res://General Use/Restart.tres" id="9_s4cgw"]
[ext_resource type="Shortcut" uid="uid://dx8s541me2r6j" path="res://General Use/QuitDyrehage.tres" id="10_cm4sl"]
[ext_resource type="Script" path="res://ReddRudolf/ParallaxBackground_Speed.gd" id="10_vrapq"]
[ext_resource type="PackedScene" uid="uid://cpojve8u1o8ve" path="res://General Use/Clouds/cloud.tscn" id="11_okxcu"]
[ext_resource type="PackedScene" uid="uid://3cy2nohk4q06" path="res://Dyrepark/button_ind.tscn" id="12_7cdr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bar1l"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnnyl"]
size = Vector2(64, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gjcsw"]
texture = ExtResource("7_kbj8e")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/bottom_left_corner = 0
5:0/0/terrains_peering_bit/left_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/left_side = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/terrain = 0
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_right_corner = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0/terrains_peering_bit/top_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_left_corner = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_side = 0
9:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/bottom_left_corner = 0
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_left_corner = 0
5:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/bottom_left_corner = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_side = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrain = 0
9:2/0/terrains_peering_bit/right_side = 0
9:2/0/terrains_peering_bit/bottom_right_corner = 0
9:2/0/terrains_peering_bit/bottom_side = 0
9:2/0/terrains_peering_bit/left_side = 0
9:2/0/terrains_peering_bit/top_side = 0
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/0/terrain = 0
10:2/0/terrains_peering_bit/right_side = 0
10:2/0/terrains_peering_bit/bottom_side = 0
10:2/0/terrains_peering_bit/bottom_left_corner = 0
10:2/0/terrains_peering_bit/left_side = 0
10:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_left_corner = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_side = 0
6:3/0/terrains_peering_bit/top_right_corner = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0
8:3/0/terrains_peering_bit/right_side = 0
8:3/0/terrains_peering_bit/left_side = 0
8:3/0/terrains_peering_bit/top_side = 0
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 0
9:3/0/terrains_peering_bit/right_side = 0
9:3/0/terrains_peering_bit/bottom_side = 0
9:3/0/terrains_peering_bit/left_side = 0
9:3/0/terrains_peering_bit/top_side = 0
9:3/0/terrains_peering_bit/top_right_corner = 0
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 0
10:3/0/terrains_peering_bit/right_side = 0
10:3/0/terrains_peering_bit/bottom_side = 0
10:3/0/terrains_peering_bit/left_side = 0
10:3/0/terrains_peering_bit/top_left_corner = 0
10:3/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/bottom_left_corner = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_left_corner = 0
5:4/0/terrains_peering_bit/top_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_right_corner = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/left_side = 0
6:4/0/terrains_peering_bit/top_side = 0
6:4/0/terrains_peering_bit/top_right_corner = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/left_side = 0
7:4/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/terrains_peering_bit/right_side = 0
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/left_side = 0
8:4/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_ktrfy"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.560784, 0.0705882, 0.745098, 1)
sources/0 = SubResource("TileSetAtlasSource_gjcsw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrdgh"]
size = Vector2(1319.5, 20)

[sub_resource type="LabelSettings" id="LabelSettings_7digi"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_x8t4e"]
line_spacing = 0.0
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_c1xfd"]
line_spacing = 0.0
font_size = 40

[node name="ReddRudolf" type="Node2D"]
script = ExtResource("1_wxx8a")
dyrehage_scene = "res://Dyrepark/Scenes/Main.tscn"

[node name="Cloud" parent="." instance=ExtResource("11_okxcu")]
position = Vector2(507, -169)

[node name="Cloud2" parent="." instance=ExtResource("11_okxcu")]
position = Vector2(307, -396)

[node name="Cloud3" parent="." instance=ExtResource("11_okxcu")]
position = Vector2(44, -185)

[node name="Cloud4" parent="." instance=ExtResource("11_okxcu")]
position = Vector2(-265, -353)

[node name="Cloud5" parent="." instance=ExtResource("11_okxcu")]
position = Vector2(-562, -201)

[node name="ReddRudolfParallax" parent="." instance=ExtResource("5_dm1dw")]
scroll_ignore_camera_zoom = true

[node name="ReddRudolfBakgrunn" type="Sprite2D" parent="."]
visible = false
scale = Vector2(8, 8)
texture = ExtResource("3_j5uc2")

[node name="ReddRudolfPlayer" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="ReddRudolfPlayer"]
points = PackedVector2Array(-428, 15, -325, -29, -127, -34)
default_color = Color(0.572549, 0.329412, 0.0901961, 1)
script = ExtResource("9_eqkmq")

[node name="HundBak" type="CharacterBody2D" parent="ReddRudolfPlayer"]
position = Vector2(-359, 0)
script = ExtResource("3_ieqtg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReddRudolfPlayer/HundBak"]
shape = SubResource("RectangleShape2D_bar1l")

[node name="Dog_Anim" parent="ReddRudolfPlayer/HundBak" instance=ExtResource("7_3asxo")]
position = Vector2(0, 4)

[node name="ReddRudolfSlede" parent="ReddRudolfPlayer" instance=ExtResource("2_0m5s8")]
position = Vector2(-537, -1)

[node name="HundForan" type="CharacterBody2D" parent="ReddRudolfPlayer"]
position = Vector2(-180, 0)
script = ExtResource("4_cj7yg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReddRudolfPlayer/HundForan"]
shape = SubResource("RectangleShape2D_bnnyl")

[node name="Dog_Anim" parent="ReddRudolfPlayer/HundForan" instance=ExtResource("7_3asxo")]
position = Vector2(0, 4)

[node name="ObstacleSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TileMap" type="TileMap" parent="."]
visible = false
position = Vector2(0, -86)
scale = Vector2(8, 8)
tile_set = SubResource("TileSet_ktrfy")
format = 2
layer_0/tile_data = PackedInt32Array(131076, 65536, 1, 65540, 65536, 0, 131075, 65536, 1, 65539, 65536, 0, 131074, 65536, 1, 65538, 65536, 0, 131073, 65536, 1, 65537, 65536, 0, 131072, 65536, 1, 65536, 65536, 0, 196607, 65536, 1, 131071, 65536, 0, 196606, 65536, 1, 131070, 65536, 0, 196605, 65536, 1, 131069, 65536, 0, 196604, 65536, 1, 131068, 65536, 0, 196603, 65536, 1, 131067, 65536, 0, 327684, 65536, 2, 262148, 65536, 1, 196612, 65536, 1, 327683, 65536, 2, 262147, 65536, 1, 196611, 65536, 1, 327682, 65536, 2, 262146, 65536, 1, 196610, 65536, 1, 327681, 65536, 2, 262145, 65536, 1, 196609, 65536, 1, 327680, 65536, 2, 262144, 65536, 1, 196608, 65536, 1, 393215, 65536, 2, 327679, 65536, 1, 262143, 65536, 1, 393214, 65536, 2, 327678, 65536, 1, 262142, 65536, 1, 393213, 65536, 2, 327677, 65536, 1, 262141, 65536, 1, 393212, 65536, 2, 327676, 65536, 1, 262140, 65536, 1, 393211, 65536, 2, 327675, 65536, 1, 262139, 65536, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("10_vrapq")
scroll_speed = 500

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 0)

[node name="TileMap2" type="TileMap" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(0, -86)
scale = Vector2(8, 8)
tile_set = SubResource("TileSet_ktrfy")
format = 2
layer_0/tile_data = PackedInt32Array(131076, 65536, 1, 65540, 65536, 0, 131075, 65536, 1, 65539, 65536, 0, 131074, 65536, 1, 65538, 65536, 0, 131073, 65536, 1, 65537, 65536, 0, 131072, 65536, 1, 65536, 65536, 0, 196607, 65536, 1, 131071, 65536, 0, 196606, 65536, 1, 131070, 65536, 0, 196605, 65536, 1, 131069, 65536, 0, 196604, 65536, 1, 131068, 65536, 0, 196603, 65536, 1, 131067, 65536, 0, 327684, 65536, 2, 262148, 65536, 1, 196612, 65536, 1, 327683, 65536, 2, 262147, 65536, 1, 196611, 65536, 1, 327682, 65536, 2, 262146, 65536, 1, 196610, 65536, 1, 327681, 65536, 2, 262145, 65536, 1, 196609, 65536, 1, 327680, 65536, 2, 262144, 65536, 1, 196608, 65536, 1, 393215, 65536, 2, 327679, 65536, 1, 262143, 65536, 1, 393214, 65536, 2, 327678, 65536, 1, 262142, 65536, 1, 393213, 65536, 2, 327677, 65536, 1, 262141, 65536, 1, 393212, 65536, 2, 327676, 65536, 1, 262140, 65536, 1, 393211, 65536, 2, 327675, 65536, 1, 262139, 65536, 1)

[node name="TileMap3" type="TileMap" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1280, -86)
scale = Vector2(8, 8)
tile_set = SubResource("TileSet_ktrfy")
format = 2
layer_0/tile_data = PackedInt32Array(131076, 65536, 1, 65540, 65536, 0, 131075, 65536, 1, 65539, 65536, 0, 131074, 65536, 1, 65538, 65536, 0, 131073, 65536, 1, 65537, 65536, 0, 131072, 65536, 1, 65536, 65536, 0, 196607, 65536, 1, 131071, 65536, 0, 196606, 65536, 1, 131070, 65536, 0, 196605, 65536, 1, 131069, 65536, 0, 196604, 65536, 1, 131068, 65536, 0, 196603, 65536, 1, 131067, 65536, 0, 327684, 65536, 2, 262148, 65536, 1, 196612, 65536, 1, 327683, 65536, 2, 262147, 65536, 1, 196611, 65536, 1, 327682, 65536, 2, 262146, 65536, 1, 196610, 65536, 1, 327681, 65536, 2, 262145, 65536, 1, 196609, 65536, 1, 327680, 65536, 2, 262144, 65536, 1, 196608, 65536, 1, 393215, 65536, 2, 327679, 65536, 1, 262143, 65536, 1, 393214, 65536, 2, 327678, 65536, 1, 262142, 65536, 1, 393213, 65536, 2, 327677, 65536, 1, 262141, 65536, 1, 393212, 65536, 2, 327676, 65536, 1, 262140, 65536, 1, 393211, 65536, 2, 327675, 65536, 1, 262139, 65536, 1)

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(11.25, 53)
shape = SubResource("RectangleShape2D_mrdgh")

[node name="ScoreText" type="Label" parent="."]
offset_left = -629.0
offset_top = -502.0
offset_right = -202.0
offset_bottom = -362.0
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_7digi")
metadata/_edit_use_anchors_ = true

[node name="GameOverScreen" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -150.5
offset_right = 287.0
offset_bottom = 150.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="Label" parent="GameOverScreen"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_x8t4e")

[node name="GameOverScoreText" type="Label" parent="GameOverScreen"]
layout_mode = 2
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_c1xfd")
horizontal_alignment = 1

[node name="Button_ind" parent="GameOverScreen" instance=ExtResource("12_7cdr7")]
position = Vector2(203, 242.5)
is_active = true
b = [[true, "Play Again"], [false, ""], [false, ""], [false, ""], [true, "Back To Park"], [false, ""]]

[node name="RestartGame" type="Button" parent="GameOverScreen"]
visible = false
layout_mode = 2
shortcut = ExtResource("9_s4cgw")
text = "Spill Igjen"

[node name="QuitToDyrehage" type="Button" parent="GameOverScreen"]
visible = false
layout_mode = 2
shortcut = ExtResource("10_cm4sl")
text = "Til Dyrehagen"

[node name="QuitToMenu" type="Button" parent="GameOverScreen"]
visible = false
layout_mode = 2
text = "Til Hovedmenyen"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="ObstacleSpawnTimer" to="." method="_on_obstacle_spawn_timer_timeout"]
[connection signal="button_down" from="GameOverScreen/RestartGame" to="." method="_on_restart_game_button_down"]
[connection signal="button_down" from="GameOverScreen/QuitToDyrehage" to="." method="_on_quit_to_dyrehage_button_down"]
